# fast_zero

./: pyproject.toml
fast_zero/: app.py  models.py  security.py
fast_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 0bb6590a41f6_gerando_metadata_updated_at.py  978f56d0c97f_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
