[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Renan Clemonini",email = "rclemon93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<=3.12.8"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "bcrypt (==3.2.2)",
    "passlib (>=1.7.4,<2.0.0)",
    "pytz (>=2025.1,<2026.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.9.5"
gh = "^0.0.4"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
migration = 'alembic revision --autogenerate -m '
run = 'fastapi dev fast_zero/app.py'
run_local = 'fastapi dev fast_zero/app.py --host 0.0.0.0'
pre_test = 'task format'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
